WIP: prepare patch for __apply_discriminator_type_patched
